--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-speech-recognition": "^3.10.0",
     "recharts": "^2.15.1",
     "regenerator-runtime": "^0.14.1",
     "tailwind-merge": "^3.0.1",
@@ -61,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "@types/regenerator-runtime": "^0.13.6",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
